hphp/hack/test/typecheck/tconst/abstract_type_in_concrete_class.php
<?hh // strict

abstract class AbstractClassWithAbstract {
  abstract protected type const abstract_type = int;
}

class ClassWithAbstractType extends AbstractClassWithAbstract {
}
